@@ -1,17 +1,0 @@
-
-The Isgl3dPODImporter provides an example of how to obtain data from a POWERVR POD
-scene data file and convert the data into iSGL3D objects.
-
-Essentially, the Isgl3dPODImporter provides an interface to the POWERVR POD importer tools available from
-the Imagination Technologies Limited, POWERVR SDK (http://www.imgtec.com/powervr/insider/powervr-sdk.asp),
-of which some of the C++ tools classes are contained here in the pvrtools directory with kind permission 
-of Imagination Technologies Limited.
-
-The importer is capable of reproducing from POD data :
- - Simple non-animated meshes
- - Animated (skinned) meshes
- - Bones forming a skeleton
- - Texture and color materials
- - Lights
- - Cameras
- 
